--- a/Data Compliation.ipynb
+++ b/Data Compliation.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -225,6 +225,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1574"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mut_pd[\"hugo_gene_symbol\"].drop_duplicates())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -360,6 +382,29 @@
    "source": [
     "copynum = pd.read_csv('../Rees/v21.data.cnv_avg_log2.txt', skiprows = [], sep =\"\\t\")\n",
     "copynum.head(n=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23174"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "master_ccl = copynum[\"entrez_gene_id\"].drop_duplicates()\n",
+    "len(master_ccl)"
    ]
   },
   {
