--- a/Yard Replication.ipynb
+++ b/Yard Replication.ipynb
@@ -278,6 +278,265 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cclid</th>\n",
+       "      <th>Cellline</th>\n",
+       "      <th>Sites</th>\n",
+       "      <th>Histology</th>\n",
+       "      <th>Subhistology</th>\n",
+       "      <th>Culture</th>\n",
+       "      <th>SNP</th>\n",
+       "      <th>AUC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>26</td>\n",
+       "      <td>A204</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdoid_tumour</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>MCCOYS5A001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>1.955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>264</td>\n",
+       "      <td>G401</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdoid_tumour</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>MCCOYS5A001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>1.207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>265</td>\n",
+       "      <td>G402</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdoid_tumour</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>MCCOYS5A001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>0.806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>271</td>\n",
+       "      <td>GCT</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>malignant_fibrous_histiocytoma-pleomorphic_sar...</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>MCCOYS5A001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>2.099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>414</td>\n",
+       "      <td>HS729</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>DMEM001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>2.936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>578</td>\n",
+       "      <td>KYM1</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>DMEMF12003</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>2.223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>668</td>\n",
+       "      <td>MESSA</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>sarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>MCCOYS5A001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>1.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>961</td>\n",
+       "      <td>RD</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>embryonal</td>\n",
+       "      <td>DMEM001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>2.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>973</td>\n",
+       "      <td>RH18</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>alveolar</td>\n",
+       "      <td>RPMI003</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>2.267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>975</td>\n",
+       "      <td>RH30</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>alveolar</td>\n",
+       "      <td>RPMI001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>1.616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>976</td>\n",
+       "      <td>RH41</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>alveolar</td>\n",
+       "      <td>RPMI001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>0.841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>1037</td>\n",
+       "      <td>SKLMS1</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>sarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>EMEM001</td>\n",
+       "      <td>SNP-unconfirmed</td>\n",
+       "      <td>2.406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>1063</td>\n",
+       "      <td>SKUT1</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>leiomyosarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>EMEM001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>1.757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492</th>\n",
+       "      <td>1187</td>\n",
+       "      <td>TE125T</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>RPMI001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>2.028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>1195</td>\n",
+       "      <td>TE617T</td>\n",
+       "      <td>soft_tissue</td>\n",
+       "      <td>rhabdomyosarcoma</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>DMEM001</td>\n",
+       "      <td>SNP-matched-reference</td>\n",
+       "      <td>1.398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Cclid Cellline        Sites  \\\n",
+       "10      26     A204  soft_tissue   \n",
+       "102    264     G401  soft_tissue   \n",
+       "103    265     G402  soft_tissue   \n",
+       "106    271      GCT  soft_tissue   \n",
+       "159    414    HS729  soft_tissue   \n",
+       "223    578     KYM1  soft_tissue   \n",
+       "262    668    MESSA  soft_tissue   \n",
+       "381    961       RD  soft_tissue   \n",
+       "386    973     RH18  soft_tissue   \n",
+       "387    975     RH30  soft_tissue   \n",
+       "388    976     RH41  soft_tissue   \n",
+       "410   1037   SKLMS1  soft_tissue   \n",
+       "424   1063    SKUT1  soft_tissue   \n",
+       "492   1187   TE125T  soft_tissue   \n",
+       "497   1195   TE617T  soft_tissue   \n",
+       "\n",
+       "                                             Histology Subhistology  \\\n",
+       "10                                     rhabdoid_tumour           NS   \n",
+       "102                                    rhabdoid_tumour           NS   \n",
+       "103                                    rhabdoid_tumour           NS   \n",
+       "106  malignant_fibrous_histiocytoma-pleomorphic_sar...           NS   \n",
+       "159                                   rhabdomyosarcoma           NS   \n",
+       "223                                   rhabdomyosarcoma           NS   \n",
+       "262                                            sarcoma           NS   \n",
+       "381                                   rhabdomyosarcoma    embryonal   \n",
+       "386                                   rhabdomyosarcoma     alveolar   \n",
+       "387                                   rhabdomyosarcoma     alveolar   \n",
+       "388                                   rhabdomyosarcoma     alveolar   \n",
+       "410                                            sarcoma           NS   \n",
+       "424                                     leiomyosarcoma           NS   \n",
+       "492                                   rhabdomyosarcoma           NS   \n",
+       "497                                   rhabdomyosarcoma           NS   \n",
+       "\n",
+       "         Culture                    SNP    AUC  \n",
+       "10   MCCOYS5A001  SNP-matched-reference  1.955  \n",
+       "102  MCCOYS5A001  SNP-matched-reference  1.207  \n",
+       "103  MCCOYS5A001  SNP-matched-reference  0.806  \n",
+       "106  MCCOYS5A001  SNP-matched-reference  2.099  \n",
+       "159      DMEM001  SNP-matched-reference  2.936  \n",
+       "223   DMEMF12003  SNP-matched-reference  2.223  \n",
+       "262  MCCOYS5A001  SNP-matched-reference  1.500  \n",
+       "381      DMEM001  SNP-matched-reference  2.375  \n",
+       "386      RPMI003  SNP-matched-reference  2.267  \n",
+       "387      RPMI001  SNP-matched-reference  1.616  \n",
+       "388      RPMI001  SNP-matched-reference  0.841  \n",
+       "410      EMEM001        SNP-unconfirmed  2.406  \n",
+       "424      EMEM001  SNP-matched-reference  1.757  \n",
+       "492      RPMI001  SNP-matched-reference  2.028  \n",
+       "497      DMEM001  SNP-matched-reference  1.398  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lung_sites = dataset1_pd[dataset1_pd['Sites'] == \"soft_tissue\"]\n",
+    "# lung_sites[[\"Subhistology\", \"Histology\"]].drop_duplicates()\n",
+    "lung_sites"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false
