--- a/Data Compilation v2.ipynb
+++ b/Data Compilation v2.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=\"center\"> Data Compliation </h1>\n",
+    "<h1 align=\"center\"> Data Compilation </h1>\n",
     "<h4 align=\"center\"> Christine Zhang </h4>"
    ]
   },
