--- a/Data Compilation v3.ipynb
+++ b/Data Compilation v3.ipynb
@@ -56,7 +56,21 @@
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> Data Compilation </h1>\n",
-    "<h4 align=\"center\"> Christine Zhang </h4>"
+    "<h3 align=\"center\"> Christine Zhang </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset Initialization"
    ]
   },
   {
@@ -68,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +226,7 @@
        "9  17;66;128;131;133;135;157;168;182;193;198;202;...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +250,7 @@
        "1574"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +347,7 @@
        "9         10           1051"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -387,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +498,7 @@
        "9              1       100506677                   -0.0143"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -508,7 +522,7 @@
        "23174"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -684,7 +698,7 @@
        "9             astrocytoma_Grade_IV     DMEM001  SNP-matched-reference  2.751  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,8 +711,306 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hugo to Entrez Conversion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hugo</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Entrez_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HGNC:5</td>\n",
+       "      <td>A1BG</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HGNC:37133</td>\n",
+       "      <td>A1BG-AS1</td>\n",
+       "      <td>503538.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HGNC:24086</td>\n",
+       "      <td>A1CF</td>\n",
+       "      <td>29974.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HGNC:6</td>\n",
+       "      <td>A1S9T~withdrawn</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HGNC:7</td>\n",
+       "      <td>A2M</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HGNC:27057</td>\n",
+       "      <td>A2M-AS1</td>\n",
+       "      <td>144571.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HGNC:23336</td>\n",
+       "      <td>A2ML1</td>\n",
+       "      <td>144568.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>HGNC:41022</td>\n",
+       "      <td>A2ML1-AS1</td>\n",
+       "      <td>100874108.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>HGNC:41523</td>\n",
+       "      <td>A2ML1-AS2</td>\n",
+       "      <td>106478979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>HGNC:8</td>\n",
+       "      <td>A2MP1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Hugo           Symbol    Entrez_ID\n",
+       "0      HGNC:5             A1BG          1.0\n",
+       "1  HGNC:37133         A1BG-AS1     503538.0\n",
+       "2  HGNC:24086             A1CF      29974.0\n",
+       "3      HGNC:6  A1S9T~withdrawn          NaN\n",
+       "4      HGNC:7              A2M          2.0\n",
+       "5  HGNC:27057          A2M-AS1     144571.0\n",
+       "6  HGNC:23336            A2ML1     144568.0\n",
+       "7  HGNC:41022        A2ML1-AS1  100874108.0\n",
+       "8  HGNC:41523        A2ML1-AS2  106478979.0\n",
+       "9      HGNC:8            A2MP1          3.0"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entrez_pd = pd.read_csv('../EntrezID.txt', skiprows = [0], sep =\"\\t\", names = [\"Hugo\", \"Symbol\", \"Entrez_ID\"]) \n",
+    "entrez_pd.head(n=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mutation_call</th>\n",
+       "      <th>hugo_gene_symbol</th>\n",
+       "      <th>cell_line_feature</th>\n",
+       "      <th>index_ccl</th>\n",
+       "      <th>entrez_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>AAK1</td>\n",
+       "      <td>AAK1_p._ANY_CODING_MUTATION</td>\n",
+       "      <td>2;3;4;6;7;8;10;12;13;15;16;18;19;20;22;23;24;2...</td>\n",
+       "      <td>22848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>AAK1</td>\n",
+       "      <td>AAK1_p.Q541</td>\n",
+       "      <td>2;3;4;6;7;8;10;12;13;15;16;18;19;20;22;23;24;2...</td>\n",
+       "      <td>22848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>AAK1</td>\n",
+       "      <td>AAK1_p.Q541indel2&gt;Q</td>\n",
+       "      <td>2;3;4;6;7;8;10;12;13;15;16;18;19;20;22;23;24;2...</td>\n",
+       "      <td>22848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>AATK</td>\n",
+       "      <td>AATK_p._ANY_CODING_MUTATION</td>\n",
+       "      <td>38;60;72;114;126;145;149;157;183;207;226;269;3...</td>\n",
+       "      <td>9625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>ABCA3</td>\n",
+       "      <td>ABCA3_p._ANY_CODING_MUTATION</td>\n",
+       "      <td>8;36;52;67;113;126;127;128;130;131;132;133;135...</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>ABCA3</td>\n",
+       "      <td>ABCA3_p.L654</td>\n",
+       "      <td>36;113;171;209</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>ABCA3</td>\n",
+       "      <td>ABCA3_p.L654V</td>\n",
+       "      <td>36;113;171;209</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>ABCA3</td>\n",
+       "      <td>ABCA3_p.N124</td>\n",
+       "      <td>127;343;556</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>ABCA3</td>\n",
+       "      <td>ABCA3_p.N124S</td>\n",
+       "      <td>127;343;556</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CCLE Hybrid Capture Mutations</td>\n",
+       "      <td>ABCC3</td>\n",
+       "      <td>ABCC3_p._ANY_CODING_MUTATION</td>\n",
+       "      <td>17;66;128;131;133;135;157;168;182;193;198;202;...</td>\n",
+       "      <td>8714</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   mutation_call hugo_gene_symbol  \\\n",
+       "0  CCLE Hybrid Capture Mutations             AAK1   \n",
+       "1  CCLE Hybrid Capture Mutations             AAK1   \n",
+       "2  CCLE Hybrid Capture Mutations             AAK1   \n",
+       "3  CCLE Hybrid Capture Mutations             AATK   \n",
+       "4  CCLE Hybrid Capture Mutations            ABCA3   \n",
+       "5  CCLE Hybrid Capture Mutations            ABCA3   \n",
+       "6  CCLE Hybrid Capture Mutations            ABCA3   \n",
+       "7  CCLE Hybrid Capture Mutations            ABCA3   \n",
+       "8  CCLE Hybrid Capture Mutations            ABCA3   \n",
+       "9  CCLE Hybrid Capture Mutations            ABCC3   \n",
+       "\n",
+       "              cell_line_feature  \\\n",
+       "0   AAK1_p._ANY_CODING_MUTATION   \n",
+       "1                   AAK1_p.Q541   \n",
+       "2           AAK1_p.Q541indel2>Q   \n",
+       "3   AATK_p._ANY_CODING_MUTATION   \n",
+       "4  ABCA3_p._ANY_CODING_MUTATION   \n",
+       "5                  ABCA3_p.L654   \n",
+       "6                 ABCA3_p.L654V   \n",
+       "7                  ABCA3_p.N124   \n",
+       "8                 ABCA3_p.N124S   \n",
+       "9  ABCC3_p._ANY_CODING_MUTATION   \n",
+       "\n",
+       "                                           index_ccl entrez_id  \n",
+       "0  2;3;4;6;7;8;10;12;13;15;16;18;19;20;22;23;24;2...     22848  \n",
+       "1  2;3;4;6;7;8;10;12;13;15;16;18;19;20;22;23;24;2...     22848  \n",
+       "2  2;3;4;6;7;8;10;12;13;15;16;18;19;20;22;23;24;2...     22848  \n",
+       "3  38;60;72;114;126;145;149;157;183;207;226;269;3...      9625  \n",
+       "4  8;36;52;67;113;126;127;128;130;131;132;133;135...        21  \n",
+       "5                                     36;113;171;209        21  \n",
+       "6                                     36;113;171;209        21  \n",
+       "7                                        127;343;556        21  \n",
+       "8                                        127;343;556        21  \n",
+       "9  17;66;128;131;133;135;157;168;182;193;198;202;...      8714  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_pd[\"entrez_id\"] = mut_pd[\"hugo_gene_symbol\"]\n",
+    "for symbol in mut_pd[\"hugo_gene_symbol\"]:\n",
+    "    entrez_index = entrez_pd.index[entrez_pd['Symbol'] == symbol].tolist()\n",
+    "    if entrez_index != []:\n",
+    "        entrez_ID = entrez_pd.get_value(entrez_index[0], \"Entrez_ID\")\n",
+    "        mut_pd[\"entrez_id\"].replace(symbol, entrez_ID, inplace=True)\n",
+    "        \n",
+    "mut_pd.head(n=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset Compilation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -723,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -744,6 +1056,78 @@
     "all_overlap, all_len = intersect (auc_mut_lst, mut_copynum_lst, auc_mut_copynum, 0, \"int\")\n",
     "\n",
     "print \"Total Number of Master CCL Ids: \" + str(all_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "all_sorted = np.sort(all_overlap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>3</th>\n",
+       "      <th>7</th>\n",
+       "      <th>10</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>19</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>25</th>\n",
+       "      <th>...</th>\n",
+       "      <th>155481</th>\n",
+       "      <th>155493</th>\n",
+       "      <th>155498</th>\n",
+       "      <th>155502</th>\n",
+       "      <th>155505</th>\n",
+       "      <th>155510</th>\n",
+       "      <th>155511</th>\n",
+       "      <th>155513</th>\n",
+       "      <th>155518</th>\n",
+       "      <th>155520</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 472 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [3, 7, 10, 15, 16, 19, 21, 22, 23, 25, 26, 27, 28, 29, 33, 37, 41, 43, 44, 47, 50, 52, 53, 55, 57, 59, 64, 66, 67, 69, 70, 71, 90, 97, 99, 101, 102, 103, 109, 110, 112, 113, 117, 118, 120, 122, 123, 125, 126, 128, 129, 131, 138, 139, 141, 144, 146, 147, 149, 158, 160, 162, 170, 172, 185, 186, 188, 190, 201, 202, 205, 208, 211, 212, 215, 219, 225, 230, 232, 233, 234, 236, 237, 238, 246, 247, 248, 255, 257, 258, 261, 262, 264, 265, 268, 271, 274, 280, 281, 293, ...]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 472 columns]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([], [], all_sorted)"
    ]
   },
   {
