--- a/Data Compilation v3.ipynb
+++ b/Data Compilation v3.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1159,7 +1159,7 @@
        "[0 rows x 473 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,321 +1187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>3</th>\n",
-       "      <th>7</th>\n",
-       "      <th>10</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>19</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>25</th>\n",
-       "      <th>...</th>\n",
-       "      <th>155493</th>\n",
-       "      <th>155498</th>\n",
-       "      <th>155502</th>\n",
-       "      <th>155505</th>\n",
-       "      <th>155510</th>\n",
-       "      <th>155511</th>\n",
-       "      <th>155513</th>\n",
-       "      <th>155518</th>\n",
-       "      <th>155520</th>\n",
-       "      <th>Entrez_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>890.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4478.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2317.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6790.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120892.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4342.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4739.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6498.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8313.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10298.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10 rows × 473 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     3    7   10   15   16   19   21   22   23   25    ...      155493  \\\n",
-       "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "1  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "4  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         1.0   \n",
-       "5  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "6  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "7  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "8  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "9  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0    ...         0.0   \n",
-       "\n",
-       "   155498  155502  155505  155510  155511  155513  155518  155520  Entrez_id  \n",
-       "0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0      890.0  \n",
-       "1     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     4478.0  \n",
-       "2     0.0     0.0     0.0     0.0     1.0     1.0     0.0     0.0     2317.0  \n",
-       "3     0.0     0.0     0.0     1.0     0.0     0.0     0.0     0.0     6790.0  \n",
-       "4     0.0     0.0     0.0     0.0     0.0     1.0     0.0     0.0   120892.0  \n",
-       "5     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     4342.0  \n",
-       "6     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     4739.0  \n",
-       "7     0.0     0.0     0.0     0.0     0.0     1.0     0.0     0.0     6498.0  \n",
-       "8     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     8313.0  \n",
-       "9     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0    10298.0  \n",
-       "\n",
-       "[10 rows x 473 columns]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Data saved in mutation.txt - no need to rerun\n",
     "\n",
@@ -1523,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1840,7 +1530,7 @@
        "[10 rows x 473 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,6 +1540,19 @@
     "mutation_expanded_pd = pd.read_csv('mutation.csv', sep = \" \", names = headers_pd)\n",
     "print len(mutation_expanded_pd)\n",
     "mutation_expanded_pd.head(n=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "file_name = \"mutation_pd\"\n",
+    "with open(file_name,'wb') as my_file_obj:\n",
+    "    pickle.dump(mutation_expanded_pd,my_file_obj)"
    ]
   },
   {
@@ -1868,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2197,7 +1900,7 @@
        "[10 rows x 473 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2224,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2235,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -2584,7 +2287,7 @@
        "[10 rows x 472 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2602,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
