gene selection with categorical

--- a/Somewhat Informed v03.ipynb
+++ b/Somewhat Informed v03.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
        "Name: Subhistology, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
        "4  clear_cell_renal_cell_carcinoma     RPMI001  SNP-matched-reference  3.123  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +254,19 @@
     "        else:\n",
     "            auc_pd.loc[index,\"Sites\"] = auc_pd.loc[index,\"Subhistology\"]\n",
     "auc_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "file_name = \"auc_pd\"\n",
+    "with open(file_name,'wb') as my_file_obj:\n",
+    "    pickle.dump(auc_pd,my_file_obj)"
    ]
   },
   {
